Added W07 pop quiz blog

--- a/Docusaurus/blog/authors.yml
+++ b/Docusaurus/blog/authors.yml
@@ -21,3 +21,15 @@ slorber:
     linkedin: sebastienlorber
     github: slorber
     newsletter: https://thisweekinreact.com
+
+isaacboentoro:
+  name: Isaac Jesse Boentoro
+  title: pretentious classics reader
+  url: https://github.com/isaacboentoro
+  image_url: https://github.com/isaacboentoro.png
+
+thataruby:
+  name: Athazahra Nabila Ruby
+  title: avid fanfiction reader
+  url: https://github.com/thataruby
+  image_url: https://github.com/thataruby.png
